added reset password endpoint (unsafe)
