# internal/handler/handler.go
@@ -12,6 +12,9 @@ type Handler interface {
 	GetCategories(c *gin.Context)
 	Login(c *gin.Context)
 	Register(c *gin.Context)
+	ResetPasswordRequest(c *gin.Context)
+	VerifyOtp(c *gin.Context)
+	ResetPassword(c *gin.Context)
 	VerifyRegister(c *gin.Context)
 	VerifyUser(c *gin.Context)
 	GetCartInfo(c *gin.Context)
